<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AllOfPageSingUp"
    tools:context=".Views.Activity.Signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/side_sheet_behavior" />

        <!-- Welcome Message -->
        <TextView
            android:id="@+id/signUpTXT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_your_perfect_home"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold" />

        <!-- User name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/user_name"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#172B4D"
            app:boxStrokeWidth="2dp"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--Email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_baseline_contact_mail_24"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="#172B4D"
            app:boxStrokeWidth="2dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--Password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#172B4D"
            app:boxStrokeWidth="2dp"
           >


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--confirm password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/displayConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:passwordToggleEnabled="true"
            app:boxStrokeColor="#172B4D"
            app:boxStrokeWidth="2dp"
           >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/button_bg"
            android:text="@string/register"
            android:layout_marginTop="22dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/loginTxt"
            android:layout_width="353dp"
            android:layout_height="67dp"
            android:layout_marginStart="34dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/already_have_an_account_login"
            android:textColor="#9A9898"
            android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.457"
            />


</LinearLayout>
