<resources>
    <string name="app_name">RentRight</string>
    <!-- Strings used for fragments for navigation -->
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="find_your_perfect_home">Find Your Perfect Home</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="remember_me">remember me</string>
    <string name="forgot_password">forgot password</string>
    <string name="do_not_have_account_sign_up">Do not have account? Sign up</string>
    <string name="this_is_a_custom_toast">This is a custom toast!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="discover_your_dream_place_to_live">Discover your dream place to live</string>
    <string name="find_your_perfect_stay">Find Your Perfect Stay</string>
    <string name="empty">empty</string>
    <string name="home">Home</string>
    <string name="refresh">Refresh</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Log out</string>
    <string name="image_description">Image Description</string>
    <string name="rent">Rent</string>
    <string name="_2355_madison_ave">2355 Madison Ave</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zipcode">Zipcode</string>
    <string name="description">Description</string>
    <string name="call">Call</string>
    <string name="value">Value</string>
    <string name="phone_number">Phone Number</string>
    <string name="filter">Filter</string>
</resources>